1. 删除部分无效代码 2. 部分细节处理